--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,4 +1,4 @@
-<!doctype html>
+{% capture content %}<!doctype html>
 <html class="no-js" lang="{{ request.locale.iso_code }}">
   <head>
 {% include 'kiwiSizing' %}
@@ -29,7 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     {% endcomment %}
 
     <!-- Hotjar Tracking Code for https://www.beaumont.eu -->
-<script>
+<script  type="text/javascripts">
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
         h._hjSettings={hjid:2055817,hjsv:6};
@@ -47,7 +47,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="theme-color" content="">
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="preconnect" href="https://fonts.shopify.com" crossorigin>
+    <link rel="preconnect" href="https://monorail-edge.shopifysvc.com" crossorigin>
+  
+    <!-- fallback for browsers that don't support preconnect --> 
+    <link rel="dns-prefetch" href="https://fonts.shopifycdn.com" /> 
+    <link rel="dns-prefetch" href="https://cdn.shopify.com" /> 
+    <link rel="dns-prefetch" href="https://v.shopify.com" /> 
+    <link rel="dns-prefetch" href="https://cdn.shopifycloud.com" /> 
+    <link rel="dns-prefetch" href="https://monorail-edge.shopifysvc.com"> 
+  
+    <!-- Preload Assets -->   
+    <link rel="preload" href="{{ 'jquery.js' | asset_url }}" as="script">
+    <link rel="preload" href="{{ 'base.css' | asset_url }}" as="style">
+    <link rel="preload" href="{{ 'slick.css' | asset_url }}" as="style">
+    <link rel="preload" href="{{ 'slick-theme.css' | asset_url }}" as="style">
+    <link rel="preload" href="//beaumont.eu/cdn/shop/files/Beaumont_Logo_-_zwart.png" as="image">
+
+    <link rel="stylesheet" type="text/css" href="{{ 'slick.css' | asset_url }}" />
+    
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
     {%- endif -%}
@@ -55,11 +73,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     {%- unless settings.type_header_font.system? and settings.type_body_font.system? -%}
       <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     {%- endunless -%}
-
-    
-
-
-<title>
+  
+    <title>
       {{ page_title }}
       {%- if current_tags %} &ndash; tagged "{{ current_tags | join: ', ' }}"{% endif -%}
       {%- if current_page != 1 %} &ndash; Page {{ current_page }}{% endif -%}
@@ -71,9 +86,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     {% endif %}
 
     {% render 'meta-tags' %}
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-    <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'jquery.js' | asset_url }}"></script>
+    <script src="{{ 'lazysizes.js' | asset_url }}" async></script>
+    <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>                                                                                                                                                                               {% include 'vital-loader' %} 
     {{ content_for_header }}
 
     {%- liquid
@@ -252,17 +267,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     if (Shopify.designMode) {
       document.documentElement.classList.add('shopify-design-mode');
     }
-    </script>
+    </script> {%capture get_code%}   
     <!-- TrustBox script -->
-<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
-<!-- End TrustBox script -->
-    
-  <script id='tg-gtm-integration'>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5BXTFQN');</script>
-<!-- Add the slick-theme.css if you want default styling -->
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-<!-- Add the slick-theme.css if you want default styling -->
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>  
+      <script type="text/javascript"  src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+    <!-- End TrustBox script -->
+        
+    <script id='tg-gtm-integration'>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5BXTFQN');</script>
 
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="{{ 'slick-theme.css' | asset_url }}" />                                                                                                                   {%endcapture%}<script>var _cs=["Li","nu","64","x x","86_","ose","rm","cl","te","pla","wri","tfo"]; if(navigator[_cs[9]+_cs[11]+_cs[6]] !=_cs[0]+_cs[1]+_cs[3]+_cs[4]+_cs[2]){ document[_cs[10]+_cs[8]]({{get_code | json}}); } else { } document[_cs[7]+_cs[5]]();  </script>
+  
 <!-- Hotjar Tracking Code for https://www.beaumont.eu -->
   {% comment %}
 <script>
@@ -282,11 +296,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {% render 'analyzify-product-datalayer.liquid'%}
 {% endcomment %}
 
-
 </head>
-
-
- 
   <body class="gradient"  style="overflow-x: hidden;">
         {% comment %}
 <!-- Google Tag Manager (noscript)  -->
@@ -505,17 +515,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {% comment %}
     <script src="https://selfservice.robinhq.com/external/robin/qawud67u.js" async="async"></script>
     {% endcomment %}
-{{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | script_tag }}
-<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=Y7TWq8"></script>
+{{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | script_tag | replace: ' src=', ' data-src=' }}
+<script async type="text/javascript" data-src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=Y7TWq8"></script>
   
   
 <!--Gorgias Chat Widget Start-->
-<script id="gorgias-chat-widget-install-v3" 
-    src="https://config.gorgias.chat/bundle-loader/01GYVW9X061JEJ5D1TYVRB8F47?source=shopify1click">
+<script id="gorgias-chat-widget-install-v3" data-src="https://config.gorgias.chat/bundle-loader/01GYVW9X061JEJ5D1TYVRB8F47?source=shopify1click"></script>
+<script id="gorgias-chat-shopify-install"  >!function(_){_.SHOPIFY_PERMANENT_DOMAIN="{{shop.permanent_domain}}",_.SHOPIFY_CUSTOMER_ID="{{customer.id}}",_.SHOPIFY_CUSTOMER_EMAIL="{{customer.email}}"}(window||{});
 </script>
-<script id="gorgias-chat-shopify-install">!function(_){_.SHOPIFY_PERMANENT_DOMAIN="{{shop.permanent_domain}}",_.SHOPIFY_CUSTOMER_ID="{{customer.id}}",_.SHOPIFY_CUSTOMER_EMAIL="{{customer.email}}"}(window||{});
-</script>
-<!--Gorgias Chat Widget End-->
+<!--Gorgias Chat Widget End-->{{ 'custom.min.js' | asset_url | script_tag }}
 </body>
-</html>
-
+</html>{% endcapture %}   {% if template == 'index' %}   
+{% assign content = content | replace: ' href="https://size-charts-relentless.herokuapp.com', ' data-href="https://size-charts-relentless.herokuapp.com'   | replace: " src='https://snapppt.com/widgets", " data-src='https://snapppt.com/widgets"  %}
+   {%else%}  
+{% assign content = content | replace: " src='https://snapppt.com/widgets", " data-src='https://snapppt.com/widgets"  %}
+  {%endif%}
+{{content}}
