--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -590,7 +590,8 @@ $('.redirect-loc').click(function()
 {
     setTimeout(function(){ window.location.href='https://beaumont.eu/pages/listing-countries'; }, 100);       
 });
-</script>
+</script> <script>document.addEventListener("startasyncloading",function(){document.querySelectorAll("link[data-href]").forEach(a=>{datahref=a.dataset.href,null!=datahref&&(a.href=datahref), delete a.dataset.href})});</script><script>document.addEventListener("startasyncloading",function(){document.querySelectorAll("script[type='text/javascripts']").forEach(e=>{var t=document.createElement("script");for(a=0;a<e.attributes.length;a++){var r=e.attributes[a];t.setAttribute(r.name,r.value)}t.type="text/javascript",t.innerHTML=e.innerHTML,e.parentNode.insertBefore(t,e),e.parentNode.removeChild(e)})});</script>
+ 
 
 {% schema %}
 {
