--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -94,7 +94,7 @@
         <div class="slideshow__media banner__media media{% if block.settings.image == blank %} placeholder{% endif %}">
           {%- if block.settings.image -%}
             <img
-              srcset="{%- if block.settings.image.width >= 375 -%}{{ block.settings.image | image_url: width: 375 }} 375w,{%- endif -%}
+              class=" lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="{%- if block.settings.image.width >= 375 -%}{{ block.settings.image | image_url: width: 375 }} 375w,{%- endif -%}
               {%- if block.settings.image.width >= 550 -%}{{ block.settings.image | image_url: width: 550 }} 550w,{%- endif -%}
               {%- if block.settings.image.width >= 750 -%}{{ block.settings.image | image_url: width: 750 }} 750w,{%- endif -%}
               {%- if block.settings.image.width >= 1100 -%}{{ block.settings.image | image_url: width: 1100 }} 1100w,{%- endif -%}
@@ -105,7 +105,7 @@
               {%- if block.settings.image.width >= 3840 -%}{{ block.settings.image | image_url: width: 3840 }} 3840w,{%- endif -%}
               {{ block.settings.image | image_url }} {{ block.settings.image.width }}w"
               sizes="100vw"
-              src="{{ block.settings.image | image_url: width: 1500 }}"
+              data-src="{{ block.settings.image | image_url: width: 1500 }}"
               loading="lazy"
               alt="{{ block.settings.image.alt | escape }}"
               width="{{ block.settings.image.width }}"
