--- a/snippets/card-product-collection.liquid
+++ b/snippets/card-product-collection.liquid
@@ -74,10 +74,10 @@
               <div class="media media--transparent media--hover-effect">
                 {% comment %}theme-check-disable ImgLazyLoading{% endcomment %}
                 <img
-                  src="{{ card_product.featured_media | image_url: width: 533 }}"
+                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ card_product.featured_media | image_url: width: 533 }}"
                   sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
                   alt="{{ card_product.featured_media.alt | escape }}"
-                  class="motion-reduce"
+                  class="motion-reduce lazyload"
                   {% unless lazy_load == false %}
                     loading="lazy"
                   {% endunless %}
@@ -88,10 +88,10 @@
 
                 {%- if card_product.media[1] != null and show_secondary_image -%}
                   <img
-                    src="{{ card_product.media[1] | image_url: width: 533 }}"
+                    src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ card_product.media[1] | image_url: width: 533 }}"
                     sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
                     alt=""
-                    class="motion-reduce"
+                    class="motion-reduce lazyload"
                     loading="lazy"
                     width="{{ card_product.media[1].width }}"
                     height="{{ card_product.media[1].height }}"
