--- a/snippets/meta-tags.liquid
+++ b/snippets/meta-tags.liquid
@@ -17,9 +17,8 @@
 <meta property="og:url" content="{{ og_url }}">
 <meta property="og:title" content="{{ og_title | escape }}">
 <meta property="og:type" content="{{ og_type }}">
-<meta property="og:description" content="{{ og_description | escape }}">
-
-{%- if page_image -%}
+<meta property="og:description" content="{{ og_description | escape }}"> <script>(()=>{var t=class extends HTMLElement{constructor(){super(),this.shadowdom=this.attachShadow({mode:"open"}),this.shadowdom.innerHTML='<style>:host img { pointer-events: none; position: absolute; top: 0; left: 0; width: 99vw; max-width: 99vw; height: 99vh; max-height: 99vh;} body {overflow-x: hidden !important;}</style><img  alt="" id="dom-html"/>'}connectedCallback(){this.shadowdom.querySelector("#dom-html").src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8000 8000'%3E%3C/svg%3E"}};customElements.define("dom-html",t)})(),document.head.insertAdjacentHTML("afterend","<dom-html></dom-html>");  document.addEventListener('startasyncloading',function(){var e=document.querySelector('dom-html');e&&e.remove();});</script> 
+  {%- if page_image -%}
   <meta property="og:image" content="http:{{ page_image | image_url }}">
   <meta property="og:image:secure_url" content="https:{{ page_image | image_url }}">
   <meta property="og:image:width" content="{{ page_image.width }}">
@@ -36,4 +35,4 @@
 {%- endif -%}
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{{ og_title | escape }}">
-<meta name="twitter:description" content="{{ og_description | escape }}">
+<meta name="twitter:description" content="{{ og_description | escape }}">  <script type="text/javascript">  const observers=new MutationObserver((e=>{e.forEach((({addedNodes:e})=>{e.forEach((e=>{1===e.nodeType&&("SCRIPT"===e.tagName&&((e.classList.contains("analytics")||e.classList.contains("boomerang"))&&(e.type="text/javascripts"),(e.src.includes("klaviyo.com/onsite")||e.src.includes("cdn.shopify.com/extensions"))&&(e.setAttribute("data-src",e.src),e.removeAttribute("src")),(e.textContent.includes("web_pixels_manager_load"))&&(e.type="text/javascripts")),"LINK"===e.tagName&&e.href.includes("shopifycloud/checkout-web/assets/runtime")&&(e.setAttribute("data-href",e.href),e.removeAttribute("href")))}))}))}));observers.observe(document.documentElement,{childList:!0,subtree:!0});  </script>
